# backupbot

./: .gitignore  LICENSE  README.md  pytest.ini  setup.cfg  setup.py
doc/: CONTRIBUTE.md  planning.md
doc/example/manual_test/: backup-config.json
doc/example/manual_test/service/: docker-compose.yaml
src/backupbot/: __init__.py  backupbot.py  data_structures.py  errors.py  logger.py  main.py  utils.py  versioning.py
src/backupbot/abstract/: __init__.py  backup_adapter.py  backup_task.py  container_backup_adapter.py  storage_info.py
src/backupbot/backup_adapter/: __init__.py  container_backup_adapter.py  docker_backup.py
src/backupbot/docker/: backup_tasks.py  container_utils.py  docker.py  docker_backup.py
src/backupbot/docker_compose/: __init__.py  backup.py  backup_tasks.py  container_utils.py  storage_info.py
tests/: conftest.py
tests/integration/: test_main_cli.py
tests/resources/: backup_scheme.json  docker-compose.yaml  docker_backup_scheme.json
tests/resources/sample_bind_mount_dir/bind_mount1/: file2.txt
tests/resources/sample_bind_mount_dir/bind_mount2/: file3.txt
tests/resources/sample_docker_compose_service/: bind_mount_backup_scheme.json  combined_backup_scheme.json  docker-compose.yaml  mysql_backup_scheme.json  volume_backup_scheme.json
tests/resources/sample_docker_compose_service/mysql_service_bind_mount/scripts/: create.sh
tests/unit/: test_backupbot.py  test_data_structures.py  test_utils.py  test_versioning.py
tests/unit/backup_adapter/: test_docker_backup.py
tests/unit/docker/: test_backup_tasks.py  test_container_utils.py  test_docker_backup.py
tests/unit/docker_compose/: test_backup.py  test_backup_tasks.py  test_container_utils.py
tests/utils/: Dockerfile  docker-compose.yaml  dummies.py
