[metadata]
name = backupbot
description = Python tool to backup data from a Docker-Compose eco-system.

[options]
python_requires = >=3.9
package_dir = 
    = src
packages = find:

[options.packages.find]
where =src

[options.entry_points]
console_scripts =
    backupbot=backupbot.main:main

[coverage:run]
branch = True
omit = tests/*,setup.py  # define paths to omit

[coverage:report]
show_missing = True
skip_covered = True

[options.extras_require]
dev =
    tox
    black
    isort
    mypy
    pylint
    pytest
    types-setuptools
    types-PyYAML
    pyyaml
    docker
    pytest-cov
    %(build)s

build =
    build[virtualenv]