[metadata]
name = backupbot
description = Python Backup Tool for Linux Container Environments.
version = 1.1.1
author = Nico Weil

[options]
python_requires = >=3.9
package_dir = 
    = src
packages = find:
install_requires =
    pydantic

[options.packages.find]
where =src

[options.entry_points]
console_scripts =
    backupbot=backupbot.main:main_backup
    bub=backupbot.main:main_backup
    backupbot-confgen=backupbot.main:main_generate_config
    bub-confgen=backupbot.main:main_generate_config

[coverage:run]
branch = True
omit = tests/*,setup.py  # define paths to omit

[coverage:report]
show_missing = True
skip_covered = True

[options.extras_require]
dev =
    tox
    black
    isort
    mypy
    pylint
    pytest
    types-setuptools
    types-PyYAML
    pyyaml
    docker
    pytest-cov